--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<p class="header-subtitle">Верстка на HTML/CSS <br>
 					Разработка сайтов под ключ</p>
 					<div class="header-button-block">
-						<button class="header-button">Связаться</button>
+						<a href="https://vk.me/id56039579" class="header-button">Связаться</a>
 						<small>*Это бесплатно</small>
 					</div>
 				</div>
@@ -74,16 +74,16 @@
 				<div class="col-md-4">
 					<div class="social-block">
 						<p>Подпишитесь:</p>
-						<a href="#"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
-						<a href="#"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
-						<a href="#"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
-						<a href="#"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
+						<a href="https://www.facebook.com/profile.php?id=100023100423934"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
+						<a href="https://vk.com/id56039579"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
+						<a href="https://t.me/Alexcoolweb"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
+						<a href="https://www.youtube.com/channel/UC_gNSc1Zx0Ikw8dZ9VZiYxA?view_as=subscriber"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="footer-cta-block">
 						<p class="footer-cta">Напишите мне</p>
-						<button class="footer-button">Написать</button>
+						<a href="https://vk.me/id56039579" class="footer-button">Написать</a>
 					</div>
 				</div>	
 			</div>
