--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
 </head>
 <body>
-	
 	<header>
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-7">
-					<img class="header-img" src="img/main-img.png" alt="Монитор">
+					<img class="header-img wow fadeInLeftBig" data-wow-delay="0.1s" src="img/main-img.png" alt="Монитор" >
 				</div>
 				<!-- /.col-7 -->
 				<div class="col-lg-5">
-					<p class="header-pretitle">Веб-разработчик</p>
-					<h1 class="header-title">Аброскин Алексей</h1>
-					<p class="header-subtitle">Верстка на HTML/CSS <br>
+					<p class="header-pretitle wow fadeInRightBig" data-wow-delay="0.2s">Веб-разработчик</p>
+					<h1 class="header-title wow fadeInRightBig" data-wow-delay="0.3s">Аброскин Алексей</h1>
+					<p class="header-subtitle wow fadeInRightBig" data-wow-delay="0.4s">Верстка на HTML/CSS <br>
 					Разработка сайтов под ключ</p>
-					<div class="header-button-block">
+					<div class="header-button-block wow fadeInRightBig" data-wow-delay="0.5s">
 						<a href="https://vk.me/id56039579" class="header-button">Связаться</a>
 						<small>*Это бесплатно</small>
 					</div>
@@ -38,7 +38,7 @@
 	</header>
 	<section class="portfolio">
 		<div class="container">
-			<div class="portfolio-block">
+			<div class="portfolio-block animated fadeIn" >
 			<h2 class="portfolio-title">Портфолио</h2>
 			<p class="portfolio-subtitle">Мои работы</p>
 			<div class="row">
@@ -74,10 +74,10 @@
 				<div class="col-md-4">
 					<div class="social-block">
 						<p>Подпишитесь:</p>
-						<a href="https://www.facebook.com/profile.php?id=100023100423934"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
-						<a href="https://vk.com/id56039579"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
-						<a href="https://t.me/Alexcoolweb"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
-						<a href="https://www.youtube.com/channel/UC_gNSc1Zx0Ikw8dZ9VZiYxA?view_as=subscriber"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
+						<a class="wow bounceInDown" data-wow-delay="0.1s" href="https://www.facebook.com/profile.php?id=100023100423934"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
+						<a class="wow bounceInDown" data-wow-delay="0.2s" href="https://vk.com/id56039579"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
+						<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://t.me/Alexcoolweb"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
+						<a class="wow bounceInDown" data-wow-delay="0.4s" href="https://www.youtube.com/channel/UC_gNSc1Zx0Ikw8dZ9VZiYxA?view_as=subscriber"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -90,5 +90,11 @@
 			<!-- /.row -->
 		</div>
 	</footer>
+
+	<script src="js/wow.min.js"></script>
+	<script> 
+	new WOW().init(); 
+	</script>
+
 </body>
 </html>
