Изменил ссылку на Telegram.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<p>Подпишитесь:</p>
 						<a class="wow bounceInDown" data-wow-delay="0.1s" href="https://www.facebook.com/profile.php?id=100023100423934"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
 						<a class="wow bounceInDown" data-wow-delay="0.2s" href="https://vk.com/id56039579"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
-						<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://t.me/Alexcoolweb"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
+						<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://t.me/alexabrs"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
 						<a class="wow bounceInDown" data-wow-delay="0.4s" href="https://www.youtube.com/channel/UC_gNSc1Zx0Ikw8dZ9VZiYxA?view_as=subscriber"><img src="img/socials/youtube-symbol.png" alt="YouTube"></a>
 					</div>
 				</div>
